--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.3.1"
   },
   "dependencies": {
-    "angular-local-storage": "^0.5.0",
-    "lodash": "^4.15.0"
+    "angular-local-storage": "^0.5.1",
+    "ngCordova": "^0.1.27-alpha"
   }
 }
